--- a/lib/my_app_web/live/post_live/show.html.leex
+++ b/lib/my_app_web/live/post_live/show.html.leex
@@ -6,6 +6,7 @@
     title: @page_title,
     action: @live_action,
     post: @post,
+    uploads: @uploads,
     return_to: Routes.post_show_path(@socket, :show, @post) %>
 <% end %>
 
